[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Characters/GooseShip/MightyGooseRocket.png" type="Texture" id=1]
[ext_resource path="res://Characters/GooseShip.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion23.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion24.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion32.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion25.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion27.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion28.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion21.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion29.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion26.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion30.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion22.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/GooseShip/dead/explosionversion31.png" type="Texture" id=14]
[ext_resource path="res://Assets/Minecraft.ttf" type="DynamicFontData" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 423.269
height = 924.383

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 300
outline_color = Color( 0.898039, 1, 0, 1 )
font_data = ExtResource( 15 )

[node name="GooseShip" type="Area2D"]
position = Vector2( 173.714, 34.0047 )
scale = Vector2( 0.03, 0.03 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.891899, 2.52707 )
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FlyTimer" type="Timer" parent="."]

[node name="MissileCountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnPointLeft" type="Position2D" parent="."]
position = Vector2( -1000, 0 )
scale = Vector2( 2, 2 )

[node name="SpawnPointRight" type="Position2D" parent="."]
position = Vector2( 1000, 0 )

[node name="Label" type="Label" parent="."]
margin_left = -150.0
margin_top = -696.0
margin_right = 197.0
margin_bottom = -352.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_GooseShip_area_entered"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
[connection signal="timeout" from="MissileCountdownTimer" to="." method="_on_MissileCountdownTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
